force-app/main/default/objects/Academia_Prueba__c.object
<CustomObject>
    <fields>
        <fullName>Descripcion__c</fullName>
        <label>Descripcion</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lookup_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Pruebas</relationshipLabel>
        <relationshipName>Pruebas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Random__c</fullName>
        <label>Random</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Prueba</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PA-{0000}</displayFormat>
        <label>Prueba Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pruebas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>